<resources>
    <string name="hello">Hello World, WIT9Activity!</string>
    <string name="app_name">WI微逸输入法</string>
    <string name="app_desc">指尖上的飞舞</string>
    <string name="simple">简洁到极致</string>
    <string name="ime_name">WI微逸输入法0.1内部测试版本</string>
    <string name="title_keyboard_and_outlook_setting">键盘与外观</string>
    <string name="summary_keyboard_and_outlook_setting">定制您的输入法</string>
    <string name="title_mohu_setting">模糊音设置</string>
    <string name="summary_mohu_setting">定制您的偏好</string>
    <string name="title_reverse_candidate">翻转候选顺序</string>
    <string name="summary_reverse_candidate">自下而上显示候选词</string>
    <string name="key_reverse_candidate">REVERSE_CANDIDATE</string>
    <string name="key_left_hand">LEFT_HAND</string>
    <string name="summary_left_hand">键盘在左边，候选栏在右边。</string>
    <string name="title_left_hand">左手模式</string>
    <string name="title_skin_picker">皮肤</string>
    <string name="summary_skin_picker">选择你的色彩</string>
    <string name="key_unshown_help">KEY_UNSHOWN_HELP</string>
    <string name="title_unshown_help">若无法显示键盘请按此</string>
    <string name="summary_unshown_help">小米等手机安装后无法显示键盘，需要进行设置</string>
    <string name="unshown_desc">
        \u3000\u3000部分手机如小米安装后无法弹出键盘，请进到系统的“设置”里，点击“应用”选项，找到WI微逸输入法，点击开启悬浮窗，如下图所示。然后结束程序并重新打开即可。
    </string>
    <string name="summary_user_def_space_text">用户自定义空格文字</string>
    <string name="title_user_def_space_text">空格文字</string>
    <string name="dialogtitle_user_def_space_text">自定义空格文字</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="silent">静音</string>
    <string name="low">低</string>
    <string name="middle">中</string>
    <string name="high">高</string>
    <string name="rate">级别</string>
    <string name="shift_symbol">#+=</string>
    <string name="abc">ABC</string>
    <string name="select_all">全选</string>
    <string name="copy">复制</string>
    <string name="paste">粘贴</string>
    <string name="cut">剪切</string>
    <string name="head">行首</string>
    <string name="tail">行尾</string>
    <string name="show">显示</string>
    <string name="hide">隐藏</string>
    <string name="zh_wi">WI输入法</string>
    <string name="en_wi">WI-Inputmethod</string>
    <string name="zheng">正</string>
    <string name="zhong">中</string>
    <string name="eng">En</string>
    <string name="smile">&#x263A;</string>
    <string name="reset">重置</string>
    <string name="back">返回</string>
    <string name="categorytitle_changyong_gongneng">功能选项</string>
    <string name="categorytitle_changyong_yangshi">外观选项</string>
    <string name="categorytitle_changyong_fankui">反馈选项</string>
    <string name="title_quanpinjiucuo">全拼智能纠错</string>
    <string name="summary_quanpinjiucuo">勾选开启全拼智能纠错</string>
    <string name="title_biaoqing">Emoji表情</string>
    <string name="summary_biaoqing">勾选开启更丰富的表情输入</string>
    <string name="title_jianpin_mode">简拼输入</string>
    <string name="summary_jianpin_mode">开启简拼输入模式</string>
    <string name="title_lianxiang">中文联想</string>
    <string name="summary_lianxiang">联想下一个候选词</string>
    <string name="qk_summary_slide_pin_mode">设置点滑状态、声音大小、自定义点滑等</string>
    <string name="nk_summary_slide_pin_mode">九键下无法使用</string>
    <string name="title_slide_pin">点滑输入</string>
    <string name="summary_slide_pin">勾选开启拼音串点滑输入，全拼模式下有效</string>
    <string name="title_slide_pin_volume">点滑音量设置</string>
    <string name="summary_slide_pin_volume">调节点滑音大小</string>
    <string name="title_self_def_slide_pin">自定义点滑</string>
    <string name="summary_self_def_slide_pin">设置任意按键上的点滑文字</string>
    <string name="title_slide_recommend">加载点滑组合</string>
    <string name="summary_slide_recommend">微逸新手？加载推荐点滑组合方案尝鲜</string>
    <string name="title_slide_recommend_0">默认点滑方案</string>
    <string name="summary_slide_recommend_0">初始状态的默认点滑方案，最为简洁干净</string>
    <string name="title_slide_recommend_1">中文全键盘、数字混输方案</string>
    <string name="summary_slide_recommend_1">第一排按键上划输入数字，中文数字混合输入</string>
    <string name="title_slide_recommend_2">数字符号混输方案</string>
    <string name="summary_slide_recommend_2">点滑输入数字和常用符号，也可根据习惯自定义</string>
    <string name="title_slide_recommend_3">常用符号混输方案</string>
    <string name="summary_slide_recommend_3">按键点滑输入常用符号，也可根据习惯自定义</string>
    <string name="title_advance">高级</string>
    <string name="special_function">自定义键盘大小</string>
    <string name="sound">按键音设置</string>
    <string name="summary_sound">调节按键音</string>
    <string name="vibrator">震动反馈设置</string>
    <string name="summary_vibrator">调节按键震动的级别</string>
    <string name="title_sound_effect">按键音效方案</string>
    <string name="summary_sound_effect">选择您喜欢的音效方案</string>
    <string name="dialog_title_sound_effect">音效类型</string>
    <string name="title_skin_window">皮肤</string>
    <string name="summary_skin_window">夏季五彩缤纷皮肤选择</string>
    <string name="summary_space_double_click">勾选开启双击空格输入逗号功能</string>
    <string name="title_space_double_click">双击空格输入逗号</string>
    <string name="shuangpin_mode">双拼选项</string>
    <string name="title_shuangpin">双拼类型设置</string>
    <string name="summary_shuangpin">选择您喜欢的双拼类型</string>
    <string name="dialog_title_shuangpin">双拼类型</string>
    <string name="title_advance_shuangpin">双拼高级选项</string>
    <string name="summary_advance_shuangpin">混输,句内编辑，纠错等设置</string>
    <string name="title_hunshu">全拼双拼混输</string>
    <string name="summary_hunshu">勾选开启混输模式</string>
    <string name="title_juneibianji">句内编辑模式</string>
    <string name="summary_juneibianji">勾选开启句内编辑模式</string>
    <string name="title_shuangpinjiucuo">双拼智能纠错</string>
    <string name="summary_shuangpinjiucuo">勾选开启双拼纠错模式</string>
    <string name="key">按键</string>
    <string name="data_setting">数据选项</string>
    <string name="title_dict_setting">词典管理</string>
    <string name="summary_dict_setting">自定义词典</string>
    <string name="word">文字</string>
    <string name="pinyin">拼音</string>
    <string name="add">添加</string>
    <string name="title_user_def_word">自定义用户词</string>
    <string name="title_import_contacts">加载通讯录词库</string>
    <string name="title_user_word">整理用户词</string>
    <string name="summary_on_import_contacts">取消勾选去除联系人词库</string>
    <string name="summary_off_import_contacts">勾选加载联系人词库</string>
    <string name="title_data_sync">数据同步</string>
    <string name="summary_data_sync">备份和恢复本地数据</string>
    <string name="title_data_back_up">本地备份</string>
    <string name="summary_data_back_up">备份您的用户词典到SD卡</string>
    <string name="title_data_recover">本地恢复</string>
    <string name="summary_data_recover">从SD卡恢复您的用户词典</string>
    <string name="help">使用帮助</string>
    <string name="title_about">关于</string>
    <string name="summary_about">帮助与关于</string>
    <string name="title_user_skill">使用技巧</string>
    <string name="title_donate">捐助</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_update_log">更新日志</string>
    <string name="title_share">好友推荐</string>
    <string name="summary_share">快推荐给您的好友吧</string>
    <string name="summary_donate">感谢您的支持</string>
    <string name="summary_input_setting">定制输入方式</string>
    <string name="title_auto_alpha_down">自动降低透明度</string>
    <string name="summary_auto_alpha_down">若7秒无响应键盘透明度升高</string>
    <string name="user_guide">用户手册</string>
    <string name="about">关于</string>
    <string name="donate">捐助</string>
    <string name="shuangpin_fangan">双拼方案</string>
    <string name="miui_permission">MIUI开启悬浮窗</string>
    <string name="title_keyboard_select">全新九键全键切换</string>
    <string name="title_input_setting">输入设置</string>
    <string name="summary_keyboard_setting">选择中文键盘</string>
    <string name="title_slide_pin_mode">全键点滑设置</string>
    <string name="summary_slide_pin_mode">设置点滑状态、声音大小、自定义点滑等</string>
    <string name="guide_page1_appname">WI微逸</string>
    <string name="guide_page1_welcome">指尖上的飞舞</string>
    <string name="guide_page2_text">浮动键盘 边点边看</string>
    <string name="guide_page3_text">尺寸自如 大小随心</string>
    <string name="guide_page4_text">透明度自由调节</string>
    <string name="guide_page5_text1">独有拼音预测点滑输入</string>
    <string name="guide_page5_text2">更快速 最懂你</string>
    <string name="guide_page6_text1">开启微逸</string>
    <string name="guide_page6_text2">选择微逸</string>
    <string name="guide_page6_success">微逸 有您更精彩</string>
    <string name="title_part1">第一步：先勾选WI微逸输入法</string>
    <string name="button_check_off">去勾选</string>
    <string name="button_check_on">已经完成</string>
    <string name="tittle_part2">第二步：选择WI微逸输入法</string>
    <string name="button_choose_off">选择我~</string>
    <string name="button_choose_on">^_^ 好了</string>
    <string name="summary">马上开启新的输入体验！</string>
    <string name="please_switch_to_wi">请先切换至Wi微逸输入法～</string>
    <string name="success_import_contact">成功导入联系人</string>
    <string name="num">个</string>
    <string name="clear_contact_dict">已清除通讯录词典</string>
    <string name="back_up_folder_name">wi_inputmethod</string>
    <string name="back_up_success">本地备份成功</string>
    <string name="back_up_failed">本地备份失败</string>
    <string name="not_found_sd_card">未找到SD卡</string>
    <string name="restore">恢复</string>
    <string name="words_number">个用户词</string>
    <string name="restore_failed">本地恢复失败</string>
    <string name="file_broken">文件被损坏</string>
    <string name="not_found_restore_file">未找到备份文件:</string>
    <string name="kernel_not_init">内核未初始化</string>
    <string name="no_user_word">尚无用户词</string>
    <string name="cannot_create_file">该目录下无法创建文件：</string>
    <string name="cannot_create_folder">创建目录失败：</string>
    <string name="emoji_unified2softbank_path_name">dict/emoji_unified2softbank.ser</string>
    <string name="font_file_path">fonts/iphone.ttf</string>
    <string name="share_text">#软件分享#，我正在使用@WI微逸输入法，浮动键盘横空出世，你也来试试吧！官方内测群：186058531</string>
    <string name="share_subject">快分享给你的好友吧</string>
    <string name="share">分享</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_skin_picker">皮肤</string>
    <string name="smile_key_text">^-^</string>
    <string name="symbol">符</string>
    <string name="symbol_add">\u2647</string>
    <string name="confirm">确定</string>
    <string name="cancel_b">取消</string>
    <string name="reset_b">重置</string>
    <string name="keyboard">\ue005</string>
    <string name="expression">\u263a</string>
    <string name="zh_space_text">空格</string>
    <string name="en_space_text">space</string>
    <string name="zh_enter">换行</string>
    <string name="en_enter">Enter</string>
    <string name="delete_text">\ue008</string>
    <string name="largecandidate">\uf7d9</string>
    <string name="file_write_wrong">Sorry, \nsomething is wrong when program writes to file.\nPlease report this to us
    </string>
    <string name="dialog_title_lianxiang">联想选项</string>
    <string name="SLIDE_DELETE_STR">开启删除键左滑清空</string>
    <string name="SLIDE_DELETE_TITLE">删除键左滑清空</string>
    <string name="SHADOW_STR">开启文字阴影</string>
    <string name="SHADOW_TITLE">文字阴影</string>
    <string name="shadow_category_STR">文字阴影选项</string>
    <string name="SHADOW_RADIUS_TITLE">阴影大小</string>
    <string name="SHADOW_RADIUS_DIALOG_TITLE">输入阴影大小(0~30)</string>
    <string name="SHADOW_RADIUS_SUMMARY">设定文字阴影大小</string>
    <string name="skin_diy">自定义皮肤</string>
    <string name="skin_diy_background">背景颜色</string>
    <string name="skin_diy_text">字体颜色</string>
    <string name="skin_diy_topfunc">上侧功能栏</string>
    <string name="skin_diy_bottom">底部操作栏</string>
    <string name="skin_diy_quicksymbol">符号栏</string>
    <string name="skin_diy_candiate">候选栏</string>
    <string name="skin_diy_edit">编辑框</string>
    <string name="skin_diy__t9keyboard">九键</string>
    <string name="skin_diy_keyboard">全键</string>
    <string name="skin_diy_touchdown">按下背景色</string>
    <string name="skin_diy_sure">确定</string>
    <string name="skin_diy_try">试试你的配色吧</string>
    <string name="title_keyboard_animation">键盘动画</string>
    <string name="summary_keyboard_animation">开启或关闭键盘出现或消失动画</string>
</resources>