<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
        android:key="KEYBOARD_AND_OUTLOOK"
        android:summary="@string/summary_keyboard_and_outlook_setting"
        android:title="@string/title_keyboard_and_outlook_setting">
        <ListPreference
                android:defaultValue="2"
                android:dialogTitle="@string/title_keyboard_select"
                android:entries="@array/keyboard_option"
                android:entryValues="@array/keyboard_option_value"
                android:key="KEYBOARD_SELECTOR"
                android:summary="@string/summary_keyboard_setting"
                android:title="@string/title_keyboard_select"/>

        <!-- 样式选项：翻转候选词，左手模式，空格文字，皮肤 -->
        <PreferenceCategory android:title="@string/categorytitle_changyong_yangshi" android:key="changyong_yangshi">
            <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="@string/key_reverse_candidate"-->
            <!--android:summary="@string/summary_reverse_candidate"-->
            <!--android:title="@string/title_reverse_candidate"/>-->

            <!--<CheckBoxPreference-->
            <!--android:defaultValue="false"-->
            <!--android:key="@string/key_left_hand"-->
            <!--android:summary="@string/summary_left_hand"-->
            <!--android:title="@string/title_left_hand"/>-->
            <Preference
                    android:key="skin_picker"
                    android:summary="@string/summary_skin_picker"
                    android:title="@string/title_skin_picker">
                <intent
                        android:action="android.intent.action.MAIN"
                        android:targetPackage="com.hit.wi.ve"
                        android:targetClass="com.hit.wi.ve.settings.SkinPickerActivity"/>
            </Preference>

            <com.hit.wi.ve.view.DefSpacePreference
                    android:key="USER_DEF_SPACE_TEXT"
                    android:dialogLayout="@layout/def_space_text"
                    android:summary="@string/summary_user_def_space_text"
                    android:title="@string/title_user_def_space_text"
                    android:dialogTitle="@string/dialogtitle_user_def_space_text"
                    android:positiveButtonText="@string/save"
                    android:negativeButtonText="@string/cancel"/>

        </PreferenceCategory>

        <PreferenceCategory android:title="@string/categorytitle_changyong_fankui" android:key="changyong_fankui">
            <ListPreference
                    android:defaultValue="1"
                    android:dialogTitle="@string/dialog_title_sound_effect"
                    android:entries="@array/sound_effect_option"
                    android:entryValues="@array/sound_effect_option_value"
                    android:key="KEY_SOUND_EFFECT_SELECTOR"
                    android:summary="@string/summary_sound_effect"
                    android:title="@string/title_sound_effect"/>
            <com.hit.wi.ve.view.SeekbarPreference
                    android:dialogLayout="@layout/sound_setting"
                    android:dialogTitle="@string/sound"
                    android:key="SOUND"
                    android:summary="@string/summary_sound"
                    android:title="@string/sound"/>
            <com.hit.wi.ve.view.SeekbarPreference
                    android:dialogLayout="@layout/sound_setting"
                    android:dialogTitle="@string/vibrator"
                    android:key="VIBRATOR"
                    android:summary="@string/summary_vibrator"
                    android:title="@string/vibrator"/>
            <com.hit.wi.ve.view.SeekbarPreference
                    android:dialogLayout="@layout/sound_setting"
                    android:dialogTitle="@string/title_slide_pin_volume"
                    android:key="SLIDE_PIN_VOLUME"
                    android:summary="@string/summary_slide_pin_volume"
                    android:title="@string/title_slide_pin_volume"/>
        </PreferenceCategory>


        <PreferenceCategory android:title="@string/shadow_category_STR" android:key="shadow">
            <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="SHADOW_TEXT_CHECK"
                    android:summary="@string/SHADOW_STR"
                    android:title="@string/SHADOW_TITLE"
            />

            <EditTextPreference
                    android:dialogTitle="@string/SHADOW_RADIUS_DIALOG_TITLE"
                    android:key="SHADOW_TEXT_RADIUS"
                    android:defaultValue="5"
                    android:summary="@string/SHADOW_RADIUS_SUMMARY"
                    android:title="@string/SHADOW_RADIUS_TITLE"
                    android:numeric="integer"
            />
        </PreferenceCategory>

        <PreferenceCategory
            android:title="候选词"
            android:key="candidata_set"
            >
            <com.hit.wi.ve.view.TextSizePreference
                android:dialogLayout="@layout/textsize_setting"
                android:dialogTitle="候选词字体"
                android:key="CANDIDATE_TEXT_SIZE"
                android:title="候选词字体"/>

        </PreferenceCategory>
    </PreferenceScreen>

    <!-- 设置键盘 -->
    <PreferenceScreen
            android:summary="@string/summary_input_setting"
            android:title="@string/title_input_setting">
        <!--联想设置-->
        <PreferenceCategory android:title="@string/categorytitle_changyong_gongneng"
                            android:key="changyong_gongneng">
            <ListPreference
                    android:defaultValue="27"
                    android:key="LIANXIANG_SELECTOR"
                    android:dialogTitle="@string/dialog_title_lianxiang"
                    android:entries= "@array/lianxiang_option"
                    android:entryValues= "@array/lianxiang_option_value"
                    android:summary="@string/summary_lianxiang"
                    android:title="@string/title_lianxiang">
            </ListPreference>

            <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="SLIDE_DELETE_CHECK"
                    android:summary="@string/SLIDE_DELETE_STR"
                    android:title="@string/SLIDE_DELETE_TITLE"
            />

        </PreferenceCategory>

        <!-- 双拼设置 -->
        <PreferenceCategory android:title="@string/shuangpin_mode">
            <ListPreference
                    android:defaultValue="0"
                    android:dialogTitle="@string/dialog_title_shuangpin"
                    android:entries= "@array/shuangpin_option"
                    android:enabled= "false"
                    android:entryValues= "@array/shuangpin_option_value"
                    android:key= "shuangpin_selector"
                    android:summary= "@string/summary_shuangpin"
                    android:title= "@string/title_shuangpin" />

            <!-- 双拼高级选项，开启新的窗口 -->
            <PreferenceScreen
                    android:key="advance_shuangpin_window"
                    android:summary="@string/summary_advance_shuangpin"
                    android:enabled="false"
                    android:title="@string/title_advance_shuangpin">
                <CheckBoxPreference
                        android:key="HUN_PIN"
                        android:summary="@string/summary_hunshu"
                        android:title="@string/title_hunshu"/>
                <CheckBoxPreference
                        android:key="SHUANGPIN_EDIT_SWITCH"
                        android:summary="@string/summary_juneibianji"
                        android:title="@string/title_juneibianji"/>
                <CheckBoxPreference
                        android:key="SHUANGPIN_ERROR_CORRECT"
                        android:summary="@string/summary_shuangpinjiucuo"
                        android:title="@string/title_shuangpinjiucuo"/>
            </PreferenceScreen>

        </PreferenceCategory>
        <!-- 双拼设置 -->

        <PreferenceCategory
                android:title="@string/title_slide_pin_mode"
                android:key="slide_pin_mode"
                android:enabled="false">

            <PreferenceScreen
                    android:key="SLIDE_RECOMMEND"
                    android:summary="@string/summary_slide_recommend"
                    android:title="@string/title_slide_recommend">
                <Preference
                        android:key="SLIDE_RECOMMEND0"
                        android:title="@string/title_slide_recommend_0"
                        android:summary="@string/summary_slide_recommend_0"
                />
                <Preference
                        android:key="SLIDE_RECOMMEND1"
                        android:title="@string/title_slide_recommend_1"
                        android:summary="@string/summary_slide_recommend_1"
                />
                <Preference
                        android:key="SLIDE_RECOMMEND2"
                        android:title="@string/title_slide_recommend_2"
                        android:summary="@string/summary_slide_recommend_2"
                />
                <Preference
                        android:key="SLIDE_RECOMMEND3"
                        android:title="@string/title_slide_recommend_3"
                        android:summary="@string/summary_slide_recommend_3"
                />
            </PreferenceScreen>

            <PreferenceScreen
                    android:key="SELF_DEF_SLIDE_PIN"
                    android:summary="@string/summary_self_def_slide_pin"
                    android:title="@string/title_self_def_slide_pin">
                <Preference
                        android:key="SELF_DEF_SLIDE_PIN_ADD"
                        android:layout="@layout/user_def_word_add_pre_layout"/>
            </PreferenceScreen>

        </PreferenceCategory>

    </PreferenceScreen>
    <!-- 设置键盘 -->


    <!-- 数据设置选项 -->
    <PreferenceScreen
            android:key="DATA_SYNC"
            android:summary="@string/summary_data_sync"
            android:title="@string/title_data_sync">
        <Preference
                android:key="DATA_BACK_UP"
                android:summary="@string/summary_data_back_up"
                android:title="@string/title_data_back_up"/>
        <Preference
                android:key="DATA_RECOVER"
                android:summary="@string/summary_data_recover"
                android:title="@string/title_data_recover"/>
    </PreferenceScreen>

    <PreferenceScreen
    android:title="@string/title_advance">
        <CheckBoxPreference
                android:defaultValue="false"
                android:key="AUTO_DOWN_ALPHA_CHECK"
                android:title="@string/title_auto_alpha_down"
                android:summary="@string/summary_auto_alpha_down"
        />

        <SwitchPreference
                android:defaultValue="true"
                android:key="KEYBOARD_ANIMATION"
                android:title="@string/title_keyboard_animation"
                android:summary="@string/summary_keyboard_animation"
        />
    </PreferenceScreen>

   <!-- 帮助 -->
    <PreferenceScreen
            android:key="helper"
            android:summary="@string/summary_about"
            android:title="@string/title_about">
        <Preference
                android:key="hand_book"
                android:title="@string/title_user_skill">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="com.hit.wi.ve.settings.HandBookActivity"
                    android:targetPackage="com.hit.wi.ve"/>
        </Preference>

        <Preference
                android:key="miui_permission"
                android:title="@string/miui_permission">
        </Preference>

        <Preference
                android:key="@string/key_unshown_help"
                android:title="@string/title_unshown_help"
                android:summary="@string/summary_unshown_help">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="com.hit.wi.ve.settings.UnshownHelpActivity"
                    android:targetPackage="com.hit.wi.ve"/>
        </Preference>

        <Preference
                android:key="about_us"
                android:title="@string/title_about_us">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="com.hit.wi.ve.settings.AboutWiActivity"
                    android:targetPackage="com.hit.wi.ve"/>
        </Preference>

        <Preference
                android:key="update_log"
                android:title="@string/title_update_log">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="com.hit.wi.ve.settings.UpdateLogActivity"
                    android:targetPackage="com.hit.wi.ve"/>
        </Preference>

        <Preference
                android:key="donate"
                android:title="@string/title_donate"
                android:summary="@string/summary_donate"
        >
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="com.hit.wi.ve.settings.DonateWiActivity"
                    android:targetPackage="com.hit.wi.ve"/>
        </Preference>
    </PreferenceScreen>


    <!-- 分享部分 -->
    <Preference
            android:key="share"
            android:summary="@string/summary_share"
            android:title="@string/title_share">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.hit.wi.ve.settings.ShareActivity"
                android:targetPackage="com.hit.wi.ve"/>
    </Preference>

</PreferenceScreen>