<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/guide_background_color"
              android:orientation="vertical">

    <!-- 第一部分  标题栏 -->

    <LinearLayout
            android:id="@+id/top_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_weight="0.40"
            android:background="@drawable/guide_head"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/logo"
                android:layout_width="35dip"
                android:layout_height="35dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dip"
        />
        <!--android:background="@drawable/wi_t9_icon"-->

        <TextView
                android:id="@+id/head_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="haha"
                android:textColor="#fff"
                android:textSize="18dp"/>
    </LinearLayout>

    <!-- 第二部分  勾选输入法 -->

    <LinearLayout
            android:id="@+id/center_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.73"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="50dip"
                android:text="@string/title_part1"
                android:textColor="#000"
                android:textSize="23dip"/>

        <Button
                android:id="@+id/b_check"
                android:layout_width="160dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginTop="35dip"
                android:text="@string/button_check_off"/>
    </LinearLayout>

    <!-- 第三部分 选择wi输入法 -->

    <LinearLayout
            android:id="@+id/bottom_block"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:orientation="vertical">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:text="@string/tittle_part2"
                android:textColor="#000"
                android:textSize="23dip"/>

        <Button
                android:id="@+id/b_choose"
                android:layout_width="160dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginTop="35dip"
                android:text="@string/button_choose_off"/>

        <Button
                android:id="@+id/b_summary"
                android:layout_width="240dip"
                android:layout_height="40dip"
                android:layout_gravity="center"
                android:layout_marginTop="30dip"
                android:text="@string/summary"
                android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>