<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/quicksymbol_dim" android:theme="@style/AppTheme">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_alignParentBottom="true"
                  android:id="@+id/quicksymbol_dim_bottom_bar">

        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/cancel"
                android:textColor="#111111"
                android:background="@drawable/quicksymbols_dim_button_selector"
                android:id="@+id/quicksymbol_dim_cancelbutton"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_gravity="center"
                android:text="En"
                android:textColor="#111111"
                android:background="@drawable/quicksymbols_dim_button_selector"
                android:id="@+id/quicksymbol_dim_switchbutton"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColor="#111111"
                android:text="@string/reset"
                android:background="@drawable/quicksymbols_dim_button_selector"
                android:id="@+id/quicksymbol_dim_resetbutton"
        />
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/confirm"
                android:textColor="#111111"
                android:background="@drawable/quicksymbols_dim_button_selector"
                android:id="@+id/quicksymbol_dim_confirmbutton"
        />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:id="@+id/quicksymbol_dim_content"
                  android:layout_above="@id/quicksymbol_dim_bottom_bar"
                  android:orientation="vertical"
    >
    </LinearLayout>
</RelativeLayout>